# rxjava_retrofit_mvp_kotlin

./: .gitignore  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xy/mvp/base/: AndroidApplication.kt  AppManager.kt  BaseActivity.kt
app/src/main/java/com/xy/mvp/dagger/: HasComponent.kt  PerActivity.kt
app/src/main/java/com/xy/mvp/dagger/component/: ActivityComponent.kt
app/src/main/java/com/xy/mvp/dagger/module/: ActivityModule.kt
app/src/main/java/com/xy/mvp/db/dao/: UserDao.kt
app/src/main/java/com/xy/mvp/db/impl/: UserImpl.kt
app/src/main/java/com/xy/mvp/entity/: ResponseInfo.kt  UserEntity.kt
app/src/main/java/com/xy/mvp/presenter/: BaseActivityPresenter.kt  IndexUIPresenter.kt
app/src/main/java/com/xy/mvp/presenter/api/: Api.kt  ApiService.kt  HostType.kt
app/src/main/java/com/xy/mvp/presenter/user/: LoginUIPresenter.kt  RegisterUIPresenter.kt
app/src/main/java/com/xy/mvp/ui/: IndexUI.kt  NavigateUI.kt
app/src/main/java/com/xy/mvp/ui/user/: LoginUI.kt  RegisterUI.kt  UserSelectUI.kt
app/src/main/java/com/xy/mvp/utils/: AppCompatUtils.kt  FileUtils.kt  FormatUtil.kt  FrescoUtils.kt  JniTest.kt  JniUtils.java  LogUtils.kt  MD5Utils.kt  NetWorkUtils.kt  PowerUtils.kt  SpUtils.kt  ToastUtils.kt
app/src/main/java/com/xy/mvp/utils/constants/: ConfigConstants.kt  UrlUtils.kt
app/src/main/java/com/xy/mvp/view/: ColorArcProgressBar.kt  MessageDialog.kt
buildsystem/: dependencies.gradle
